Fixed the bug where the pokemon image broke and was out of place

--- a/src/app/pokemon-stats/pokemon-stats.page.scss
+++ b/src/app/pokemon-stats/pokemon-stats.page.scss
@@ -6,17 +6,17 @@ ion-toolbar {
 .background {
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
-  flex-direction: row;
   justify-content: center;
   width: 100%;
-  height: 30%;
+  height: 190px;
   border-radius: 0px 0px 30px 30px;
 
   img {
-    width: 170px;
-    height: 170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     object-fit: cover;
+    width: 170px;
   }
 
 }
